--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,6 +24,7 @@
     font-family: sans-serif;
     font-size: 15px;
     display: block;
+    width:300px;
 }
 .button {
     background-color: #4CAF50; /* Green */
