--- a/src/app/critere-component/critere-component.component.html
+++ b/src/app/critere-component/critere-component.component.html
@@ -1,1 +1,20 @@
-<p>critere-component works!</p>
+<div class="centrer">
+        Outil d'aide d'évaluation des heuristiques
+      </div>
+
+<div class="jumbotron">
+    <div class="container">
+         <div class="row">
+             <div class="col-md-8 offset-md-2">
+
+                    <div class="form">
+                            critere-component works!
+                        </div>
+                    
+             </div>
+         </div>
+    </div>
+</div>
+
+
+
