--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,1 +1,72 @@
-<p>home-component works!</p>
+<div class="centrer">
+        Outil d'aide d'évaluation des heuristiques
+      </div>
+      <div class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    
+                    <div class="form">
+              Cette interface vous permet de consulter tous les critères/heuristiques 
+              selon deux références : la référence de Bastien et Scapin et la référnece de Nielson.
+          </div>
+          <br>
+          <div style="text-align :center">
+           <button class="button button2 " routerLink="critere-component">consulter  tous les critères</button>
+          </div>
+        <div class='texte'>
+           Pour consulter des critères d'évaluation spécifiques et adapatés à des domaines d'application ou à des plateformes , veuillez remplir les cases suivantes :
+        </div>
+        <br>
+        <div class='plateforme'>
+              <label for="sel1">  Plateforme  :</label>
+              <select class="form-control" id="sel1">
+                <option>Default</option>
+                <option>PC</option>
+                <option>Tablette</option>
+                <option>Smartphone</option>
+              </select>
+              <br>  
+        </div>
+        <div class='texte'>
+            Si vous voulez selectionner un type de domaine spécifique 
+            ou une population cible , veuillez choisir les parametres 
+            appropriés ci-dessous:
+         </div>
+         <br>
+        <div class='plateforme'>
+            <label for="sel2"> Domaine d'application  :</label>
+            <select class="form-control" id="sel2" >
+              <option>Tous</option>
+              <option>Jeux</option>
+              <option>E-learning</option>
+              <option>Safety-critical</option>
+              <option>Bureautique</option>
+              <option>Temps réel</option>
+            </select>
+            <br>  
+        </div>
+        <br>
+        <br>
+        <div class='plateforme'>
+            <label for="sel3"> Population cible  :</label>
+            <select class="form-control" id="sel3">
+              <option>Tous</option>
+              <option>Illiteré</option>
+              <option>Personne agée</option>
+              <option>Enfant</option>
+              <option>Mal voyant</option>
+              <option>Temps réel</option>
+            </select>
+            <br>  
+        </div>
+        <br>
+        <div style="text-align :center">
+            <button class="button button2 " >valider</button>
+        </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      
+      
